cluster/apps/home/scrypted/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
