cluster/apps/home/scrypted/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scrypted-http
  namespace: home
spec:
  hostnames:
    - scrypted.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: scrypted
          port: 80
